name:                react-flux
version:             0.1.0
synopsis:            A binding to React based on the Flux application architecture
category:            Web
homepage:            https://bitbucket.org/wuzzeb/react-flux
license:             BSD3
license-file:        LICENSE
author:              John Lenz <wuzzeb@gmail.com>
maintainer:          John Lenz <wuzzeb@gmail.com>
build-type:          Simple
cabal-version:       >=1.10
-- description:         

source-repository head
    type: mercurial
    location: https://bitbucket.org/wuzzeb/react-flux

library
  hs-source-dirs:      src
  ghc-options: -Wall -O0
  default-language: Haskell2010

  exposed-modules: React.Flux
                   React.Flux.DOM
                   React.Flux.PropertiesAndEvents
                   React.Flux.Internal

  other-modules: React.Flux.Class
                 React.Flux.Store

  default-extensions: CPP
                      EmptyDataDecls
                      OverloadedStrings
                      ExistentialQuantification
                      ScopedTypeVariables
                      TypeFamilies
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      FunctionalDependencies
                      FlexibleInstances

  build-depends: base >=4.8 && < 5
               , ghcjs-base
               , mtl >= 2.1
               , aeson >= 0.8
               , text >= 1.2
