name:                react-flux
version:             0.1.0
synopsis:            A binding to React based on the Flux application architecture
category:            Web
homepage:            https://bitbucket.org/wuzzeb/react-flux
license:             BSD3
license-file:        LICENSE
author:              John Lenz <wuzzeb@gmail.com>
maintainer:          John Lenz <wuzzeb@gmail.com>
build-type:          Simple
cabal-version:       >=1.10
-- description:         

source-repository head
    type: mercurial
    location: https://bitbucket.org/wuzzeb/react-flux

Flag example
    Description: Build the TODO example application
    Default: False

library
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language: Haskell2010
  js-sources: jsbits/view.js jsbits/store.js jsbits/export.js

  exposed-modules: React.Flux
                   React.Flux.DOM
                   React.Flux.PropertiesAndEvents
                   React.Flux.Internal
                   React.Flux.Export

  other-modules: React.Flux.Views
                 React.Flux.Store

  default-extensions: CPP
                      EmptyDataDecls
                      ExistentialQuantification
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeFamilies

  build-depends: base >=4.8 && < 5
               , ghcjs-base
               , deepseq
               , mtl >= 2.1
               , aeson >= 0.8
               , text >= 1.2

executable todo
   if !flag(example)
        Buildable: False
   ghc-options: -Wall
   cpp-options: -DGHCJS_BROWSER

   default-language: Haskell2010
   hs-source-dirs: example
   main-is: Main.hs
   build-depends: base
                , react-flux
                , deepseq
