name: react-flux-spec
version: 0.0.0
build-type: Simple
cabal-version: >= 1.9

executable react-flux-spec
   ghc-options: -Wall
   hs-source-dirs: .
   main-is: Spec.hs
   other-modules: TodoSpec
   build-depends: base
                , hspec
                , webdriver
                , hspec-webdriver
                , directory
                , transformers
                , text
